Fix black bars, align logo/lightning
Add lightning flash, logo/color change & relevant images

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,33 +58,60 @@ body {
 }
 
 .pokefight {
-    flex-flow: column;
+    flex-flow: column wrap;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
+}
+
+.topbox_cover, .bottombox_cover {
+    position: absolute;
+    background-color: #ffffff;
 }
 
 .topbox, .bottombox {
     background-color: #000000;
-    width: 100vw;
-    height: 150px;
 }
 
-.topbox, .bottombox {
-    position: relative;
+.topbox, .bottombox, .topbox_cover, .bottombox_cover {
+    width: 100vw;
+    height: 25%;
+}
+
+.topbox_cover {
+    top: 0%;
+}
+
+.bottombox_cover {
+    bottom: 0%;
 }
 
 .topbox {
-    top: -300px;
-}
-
-.bottombox {
-    bottom: -300px;
+    justify-content: center;
 }
 
 .action {
     background-color: #ffffff;
     width: 100vw;
-    height: 400px;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
+.lightning {
+    width: 500px;
+    height: 700px;
+    position: absolute;
+}
+
+.godSpeed {
+    color: #7DF9FF;
+}
+
+.hxh {
+    width: 150px;
+    height: auto;
 }
 
 .transparent {
